# num4lcp

./: ProjectHome.md  README.md
fluid2d_solver/: CMakeLists.txt  README.md
fluid2d_solver/CODE/: CMakeLists.txt
fluid2d_solver/CODE/include/: gpu_check_block_size.h  gpu_check_error.h  gpu_choose_device.h  gpu_cpu_timer.h  gpu_cuda_timer.h  gpu_get_device_count.h  gpu_print_current_device.h  gpu_print_device.h  gpu_print_function.h  gpu_print_versions.h  gpu_safe_call.h  gpu_set_device.h  gpu_shared_memory.h  grid2d.h  grid2d_compute_cell_center_position.h  grid2d_compute_cell_indices.h  grid2d_draw_grid_lines.h  grid2d_draw_zero_levelset.h  grid2d_extrapolate.h  grid2d_interpolate_gradient.h  grid2d_interpolate_value.h  grid2d_write_to_file.h  simulator.h  simulator_add_gravity_force.h  simulator_advect_particles.h  simulator_advect_velocity.h  simulator_apply_boundary_constraint_on_velocity.h  simulator_compute_cell_has_empty_space.h  simulator_compute_cell_has_liquid.h  simulator_compute_cfl.h  simulator_compute_energy.h  simulator_compute_momentum.h  simulator_compute_phi_liquid.h  simulator_compute_rk2.h  simulator_compute_volume.h  simulator_compute_weights.h  simulator_draw.h  simulator_initialize_grids.h  simulator_initialize_scene.h  simulator_initialize_solid_walls.h  (+31 more)
fluid2d_solver/CODE/src/: main.cu
fluid2d_solver/TEST/: CMakeLists.txt
fluid2d_solver/TEST/src/: main.cu
matlab/: LICENSE  README.txt  fischer_newton.m  ip_lcp.m  make_banded_matrix.m  make_blocked_matrix.m  make_contact_matrix.m  make_fluid_matrix.m  make_lcp.m  make_pd_matrix.m  pgs.m  (+15 more)
(+23 files in other folders)
